# bangla-text-processing-kit

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.py
bkit/lemmatizer/data/: dictionary.pkl  markers.pkl  suffixes.pkl
bkit/ner/: _infer.py
bkit/pos/: _infer.py
bkit/shallow/: _infer.py
bkit/similarity/: word2vec.py
bkit/stemmer/data/: words.pkl
bkit/utils/: _download.py  _files_and_dirs.py  _models.py
tests/: test_cleaning.py  test_model.py  test_normalization.py
tests/data/: characters.tsv  digit_cleaning.tsv  emoji_cleaning.tsv  halant.tsv  html_cleaning.tsv  multi_punct_cleaning.tsv  normalizer.tsv  punctuation_space.tsv  vowel_kar.tsv  zero_width.tsv
